vendor/pin-project-lite-0.2.6/tests/ui/pin_project/overlapping_lifetime_names.rs
use pin_project_lite::pin_project;

pin_project! { //~ ERROR E0496
    pub struct Foo<'__pin, T> { //~ ERROR E0263
        #[pin]
        field: &'__pin mut T,
    }
}

fn main() {}
